fix(footer): issues with order and spacing

--- a/src/theme/Footer/CustomFooter/customFooter.module.css
+++ b/src/theme/Footer/CustomFooter/customFooter.module.css
@@ -17,12 +17,8 @@
 .brandSection {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
   align-items: center;
-}
-
-.logoWrapper {
-  margin-bottom: 10px;
 }
 
 .copyrightWrapper {
